--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
         </div>
         <div class="header__right">
             Dark Mode
-            <input type="checkbox" class="header__checkbox js-checkbox" />
-        </div>
+            <div class="header__switch js-switch"></div>
       </div>
     </div>
   </header>
@@ -33,43 +32,43 @@
       <div class="container">
         <div class="overall__cards">
           <div class="overall__card">
-            <div class="overall__card__top-border card__top-border--facebook"></div>
+            <span class="overall__card__top-border card__top-border--facebook"></span>
             <div class="overall__card__profile">
               <img src="./images/icon-facebook.svg"  alt="Facebook icon" class="overall__card__icon">
               <p class="overall__card__username">@nathanf</p>
             </div>
-            <div class="overall__card__total-followers">1987</div>
-            <div class="overall__card__followers-text">Followers</div>
+            <p class="overall__card__total-followers">1987</p>
+            <p class="overall__card__followers-text">Followers</p>
             <span class="overall__card__stats stats--positive">12 Today</span>
           </div>
           <div class="overall__card"> 
-            <div class="overall__card__top-border card__top-border--twitter"></div>
+            <span class="overall__card__top-border card__top-border--twitter"></span>
             <div class="overall__card__profile">
               <img src="./images/icon-twitter.svg"  alt="Twitter icon" class="overall__card__icon">
               <p class="overall__card__username">@nathanf</p>
             </div>
-            <div class="overall__card__total-followers"> 1044</div>
-            <div class="overall__card__followers-text">Followers</div>
+            <p class="overall__card__total-followers">1044</p>
+            <p class="overall__card__followers-text">Followers</p>
             <span class="overall__card__stats stats--positive">99 Today</span>
           </div>
           <div class="overall__card">
-            <div class="overall__card__top-border card__top-border--instagram"></div>
+            <span class="overall__card__top-border card__top-border--instagram"></span>
             <div class="overall__card__profile">
               <img src="./images/icon-instagram.svg"  alt="Instagram icon" class="overall__card__icon">
               <p class="overall__card__username">@realnathanf</p>
             </div>
-            <div class="overall__card__total-followers">11k</div>
-            <div class="overall__card__followers-text">Followers</div>
+            <p class="overall__card__total-followers">11k</p>
+            <p class="overall__card__followers-text">Followers</p>
             <span class="overall__card__stats stats--positive">1099 Today</span>
           </div>
           <div class="overall__card">
-            <div class="overall__card__top-border card__top-border--youtube"></div>
+            <span class="overall__card__top-border card__top-border--youtube"></span>
             <div class="overall__card__profile">
               <img src="./images/icon-youtube.svg" alt="Youtube icon" class="overall__card__icon">
               <p class="overall__card__username">Nathan F.</p>
             </div>
-            <div class="overall__card__total-followers">8239</div>
-            <div class="overall__card__followers-text">Subscribers</div>
+            <p class="overall__card__total-followers">8239</p>
+            <p class="overall__card__followers-text">Subscribers</p>
             <span class="overall__card__stats stats--negative">144 Today</span>
           </div>
         </div>
@@ -78,87 +77,87 @@
     <!-- overview section -->
     <section class="overview">
       <div class="container">
-        <h1 class="overview__header">Overview - Today</h1>
+        <h3 class="overview__header">Overview - Today</h3>
         <div class="overview__cards">
           <div class="overview__card">
             <div class="overview__card__row">
-              <h1 class="overview__card__title">Page Views</h1>
+              <p class="overview__card__title">Page Views</p>
               <img src="./images/icon-facebook.svg" alt="Facebook icon"/>
             </div>
             <div class="overview__card__row">
-              <div class="overview__card__views">87</div>
+              <p class="overview__card__views">87</p>
               <span class="overview__card__stats stats--positive">3%</span>
             </div>
           </div>
           <div class="overview__card">
             <div class="overview__card__row">
-              <h1 class="overview__card__title">Likes</h1>
+              <p class="overview__card__title">Likes</p>
               <img src="./images/icon-facebook.svg" alt="Facebook icon"/>
             </div>
             <div class="overview__card__row">
-              <div class="overview__card__views">52</div>
+              <p class="overview__card__views">52</p>
               <span class="overview__card__stats stats--negative">2%</span>
             </div>
           </div>
           <div class="overview__card">
             <div class="overview__card__row">
-              <h1 class="overview__card__title">Likes</h1>
+              <p class="overview__card__title">Likes</p>
               <img src="./images/icon-instagram.svg" alt="Instagram icon"/>
             </div>
             <div class="overview__card__row">
-              <div class="overview__card__views">5462</div>
+              <p class="overview__card__views">5462</p>
               <span class="overview__card__stats stats--positive">2257%</span>
             </div>
           </div>
           <div class="overview__card">
             <div class="overview__card__row">
-              <h1 class="overview__card__title">Profile Views</h1>
+              <p class="overview__card__title">Profile Views</p>
               <img src="./images/icon-instagram.svg" alt="Instagram icon"/>
             </div>
             <div class="overview__card__row">
-              <div class="overview__card__views">52k</div>
+              <p class="overview__card__views">52k</p>
               <span class="overview__card__stats stats--positive">1375%</span>
             </div>
           </div>
           <div class="overview__card">
             <div class="overview__card__row">
-              <h1 class="overview__card__title">Retweets</h1>
+              <p class="overview__card__title">Retweets</p>
               <img src="./images/icon-twitter.svg" alt="Twitter icon" class="overview__card__icon"/>
             </div>
             <div class="overview__card__row">
-              <div class="overview__card__views">117</div>
+              <p class="overview__card__views">117</p>
               <span class="overview__card__stats stats--positive">303%</span>
             </div>
           </div>
           <div class="overview__card">
             <div class="overview__card__row">
-              <h1 class="overview__card__title">Likes</h1>
+              <p class="overview__card__title">Likes</p>
               <img src="./images/icon-twitter.svg" alt="Twitter icon" class="overview__card__icon"/>
             </div>
             <div class="overview__card__row">
-              <div class="overview__card__views">507</div>
+              <p class="overview__card__views">507</p>
               <span class="overview__card__stats stats--positive">553%</span>
             </div>
           </div>
 
           <div class="overview__card">
             <div class="overview__card__row">
-              <h1 class="overview__card__title">Likes</h1>
-              <img src="./images/icon-youtube.svg" class="overview__card__icon"/>
+              <p class="overview__card__title">Likes</p>
+              <img src="./images/icon-youtube.svg" alt="Youtube icon" class="overview__card__icon"/>
             </div>
             <div class="overview__card__row">
-              <div class="overview__card__views">107</div>
+              <p class="overview__card__views">107</p>
               <span class="overview__card__stats stats--negative">19%</span>
             </div>
           </div>
 
           <div class="overview__card">
             <div class="overview__card__row">
-              <h1 class="overview__card__title">Total views</h1>
-              <img src="./images/icon-youtube.svg" class="overview__card__icon"/>
+              <p class="overview__card__title">Total views</p>
+              <img src="./images/icon-youtube.svg" alt="Youtube icon" class="overview__card__icon"/>
             </div>
             <div class="overview__card__row">
-              <div class="overview__card__views">1407</div>
+              <p class="overview__card__views">1407</p>
               <span class="overview__card__stats stats--negative">12%</span>
             </div>
           </div>
