--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
           <h2 class="header__total-followers">Total Followers: 23,004</h2>
         </div>
         <div class="header__right">
-            Dark Mode
-            <div class="header__switch js-switch"></div>
+          Dark Mode
+          <div class="header__switch js-switch"></div>
+        </div>
       </div>
     </div>
   </header>
