--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
   <header class="header"> 
     <div class="container">
       <div class="header__content">
-        <div class="header__left">
+        <div class="header__left" data-anime="left">
           <h1 class="header__title">Social Media Dashboard</h1>
           <h2 class="header__total-followers">Total Followers: 23,004</h2>
         </div>
-        <div class="header__right">
+        <div class="header__right" data-anime="right">
           Dark Mode
           <div class="header__switch js-switch"></div>
         </div>
@@ -27,7 +27,7 @@
     </div>
   </header>
   <!-- main -->
-  <main>
+  <main class="main" data-anime="bottom">
     <!-- overall section -->
     <section class="overall">
       <div class="container">
@@ -167,7 +167,7 @@
     </section>
   </main>
   <!-- footer -->
-  <footer class="footer">
+  <footer class="footer" data-anime="bottom">
     <div class="container">
       <div class="footer__attribution">
         <p class="footer__text">
@@ -177,6 +177,6 @@
       </div>
     </div>
   </footer>
-<script src="./js/script.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 </html>
